syntax = "proto3";

package modes3.protobuf;
option java_package = "hu.bme.mit.inf.modes3.messaging.proto.messages";
option java_multiple_files = true;

enum DccOperations {
	NORMAL_OPERATIONS = 0;
	STOP_ALL_LOCOMOTIVES = 1;
	STOP_OPERATIONS = 2;
}

enum MessageType {
	NULL = 0;
	SEGMENT_COMMAND = 1;
	SEGMENT_STATE = 2;
	TRAIN_CURRENT_SEGMENT = 3;
	TRAIN_CURRENT_SPEED = 4;
	TRAIN_DIRECTION_COMMAND = 5;
	
	TRAIN_REFERENCE_SPEED = 7;
	TRAIN_REFERENCE_SPEED_COMMAND = 8;
	TURNOUT_COMMAND = 9;
	TURNOUT_STATE = 10;
	SEGMENT_OCCUPANCY = 11;
	YAKINDU_RELEASE_TO = 12;
	YAKINDU_CAN_GO_TO = 13;
	YAKINDU_CANNOT_GO_TO = 14;
	YAKINDU_RESERVE_TO = 15;
	TURNOUT_REFERENCE_STATE = 17;
	TRAIN_FUNCTION_COMMAND = 18;
	TRAIN_FUNCTION_STATE = 19;
	DCC_OPERATIONS_COMMAND = 20;
	DCC_OPERATIONS_STATE = 21;
	SEND_ALL_STATUS = 22;
	COMPUTER_VISION_OBJECT_POSITIONS = 23;
}

enum SegmentStateValue {
	DISABLED = 0;
	ENABLED = 1;
}

enum TrainDirectionValue {
	FORWARD = 0;
	BACKWARD = 1;
}

enum TurnoutStateValue {
	STRAIGHT = 0;
	DIVERGENT = 1;
}

enum TrainFunctionValue {
	OFF = 0;
	ON = 1;
}

enum SegmentOccupancyValue {
	FREE = 0;
	OCCUPIED = 1;
}

enum YakinduConnectionDirection {
	CW = 0;
	CCW = 1;
	Y_TOP = 2;
	Y_DIVERGENT = 3;
	Y_STRAIGHT = 4;
}
